--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "apache-server-configs": "^2.14.0",
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.0.15",
+    "babel-register": "^6.24.0",
     "browser-sync": "^2.14.0",
     "del": "^2.2.2",
+    "eslint": "^3.18.0",
     "eslint-config-google": "^0.3.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
@@ -18,9 +20,13 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-load-plugins": "^1.2.4",
     "gulp-newer": "^1.2.0",
+    "gulp-pug": "^3.3.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-svgmin": "^1.2.3",
+    "gulp-svgstore": "^6.1.0",
     "gulp-uglify": "^1.5.4",
     "gulp-useref": "^3.1.0",
     "psi": "^2.0.4",
@@ -37,5 +43,12 @@
   },
   "eslintConfig": {
     "extends": "google"
+  },
+  "dependencies": {
+    "bourbon": "^4.3.3",
+    "bourbon-neat": "^2.0.0",
+    "jquery": "^3.2.1",
+    "normalize.scss": "^0.1.0",
+    "underscore": "^1.8.3"
   }
 }
