--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.0.15",
     "babel-register": "^6.24.0",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.14.0",
+    "browserify": "^14.1.0",
+    "browserify-shim": "^3.8.14",
     "del": "^2.2.2",
     "eslint": "^3.18.0",
     "eslint-config-google": "^0.3.0",
@@ -23,6 +26,7 @@
     "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+    "gulp-sass-lint": "^1.3.2",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svgmin": "^1.2.3",
@@ -32,7 +36,9 @@
     "psi": "^2.0.4",
     "run-sequence": "^1.0.1",
     "sw-precache": "^3.2.0",
-    "sw-toolbox": "^3.2.1"
+    "sw-toolbox": "^3.2.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "engines": {
     "node": ">=0.12"
@@ -47,8 +53,16 @@
   "dependencies": {
     "bourbon": "^4.3.3",
     "bourbon-neat": "^2.0.0",
-    "jquery": "^3.2.1",
+    "jquery.scrollto": "^2.1.2",
     "normalize.scss": "^0.1.0",
     "underscore": "^1.8.3"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "jquery": "global:jQuery"
   }
 }
