--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "bourbon": "^4.3.3",
     "bourbon-neat": "^2.0.0",
+    "jquery": "^3.2.1",
     "jquery.scrollto": "^2.1.2",
     "normalize.scss": "^0.1.0",
     "underscore": "^1.8.3"
@@ -62,7 +63,5 @@
       "browserify-shim"
     ]
   },
-  "browserify-shim": {
-    "jquery": "global:jQuery"
-  }
+  "browserify-shim": {}
 }
