--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-load-plugins": "^1.2.4",
+    "gulp-markdown-to-json": "^1.0.3",
     "gulp-newer": "^1.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
@@ -33,7 +35,10 @@
     "gulp-svgstore": "^6.1.0",
     "gulp-uglify": "^1.5.4",
     "gulp-useref": "^3.1.0",
+    "gulp-wrap": "^0.13.0",
+    "marked": "^0.3.6",
     "psi": "^2.0.4",
+    "pug": "^2.0.0-beta11",
     "run-sequence": "^1.0.1",
     "sw-precache": "^3.2.0",
     "sw-toolbox": "^3.2.1",
