--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "gulp-htmlmin": "^2.0.0",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^2.4.0",
+    "gulp-jsoncombine": "^1.0.3",
     "gulp-load-plugins": "^1.2.4",
     "gulp-markdown-to-json": "^1.0.3",
+    "gulp-merge-json": "^1.0.0",
     "gulp-newer": "^1.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.3.0",
