--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "apache-server-configs": "^2.14.0",
     "babel-core": "^6.14.0",
+    "babel-eslint": "^8.0.1",
     "babel-preset-es2015": "^6.0.15",
     "babel-register": "^6.24.0",
     "babelify": "^7.3.0",
@@ -39,6 +40,7 @@
     "gulp-useref": "^3.1.0",
     "gulp-wrap": "^0.13.0",
     "marked": "^0.3.6",
+    "merge-stream": "^1.0.1",
     "psi": "^2.0.4",
     "pug": "^2.0.0-beta11",
     "run-sequence": "^1.0.1",
@@ -61,7 +63,8 @@
     "extends": [
       "eslint:recommended",
       "google"
-    ]
+    ],
+    "parser": "babel-eslint"
   },
   "dependencies": {
     "bourbon": "^4.3.3",
